Fixed small mobile layout issues for modal

--- a/Landing Page 05/style.scss
+++ b/Landing Page 05/style.scss
@@ -13,6 +13,9 @@ $very-light-gray-white: hsl(0, 0%, 98%);
 $light-gray: hsl(0, 0%, 81%);
 $white: hsl(0, 0%, 100%);
 
+// WIDTHS
+$xsm-mobile: 347px;
+
 // CSS RESET
 
 html {
@@ -75,13 +78,20 @@ progress {
 
 
 // MIXINS
-@mixin cardContainer($width : 85%, $margin: 20px 15px, $padding-left: 4rem, $gap:10px){
+@mixin cardContainer($width : 85%, $margin: 20px 15px, $padding-left: 4rem, $gap:0){
   .card-container {
+    display:flex;
+    flex-direction: column;
     border: 1px solid $light-gray;
     width:$width;
       margin: $margin;
     border-radius: 5px;
 
+
+
+    @media screen and (max-width:$xsm-mobile){
+      margin:9px 15px;
+    }
   
     &.mahogany-special {
       pointer-events: none;
@@ -94,11 +104,16 @@ progress {
       flex-direction: column;
       row-gap: $gap;
 
+
       .pledge-amount-heading {
         padding-left: $padding-left;
         font-size: 0.95rem;
         color: $moderate-cyan;
         font-weight: 600;
+
+        @media  screen and ( max-width:$xsm-mobile) {
+          padding-left:3.3rem;
+        }
       }
     }
 
@@ -107,6 +122,12 @@ progress {
       gap: 10px;
       padding: 0 20px;
       margin-bottom: 20px;
+
+      @media screen and ( max-width:$xsm-mobile){
+        padding: 0 9px
+
+      }
+
       .pledge-amount-span {
         align-self: center;
         font-size: 1.1rem;
@@ -119,6 +140,11 @@ progress {
       padding-inline: 20px;
       padding-top: 10px;
 
+      @media screen and (max-width: $xsm-mobile){
+        padding-inline:9px;
+        margin:0;
+      }
+
       &:hover {
         color: $moderate-cyan;
 
@@ -130,6 +156,12 @@ progress {
       .inner-circle,
       input[type="radio"] {
         cursor: pointer;
+      }
+
+
+      label[data-id="no-reward"] ~ .span-label{
+        position: relative;
+        top:0.8rem;
       }
 
       .span-label {
@@ -178,6 +210,13 @@ progress {
           &:checked + .inner-circle {
             background-color: $moderate-cyan;
           }
+
+          @media screen and (max-width:306px){
+            &[id="no-reward"] ~ .inner-circle{
+              top:27%;
+            }
+          }
+
         }
       }
     }
@@ -186,6 +225,14 @@ progress {
       padding: 20px;
       color: $dark-gray;
       line-height: 1.5rem;
+      margin:0.5rem 0;
+
+
+      @media screen and (max-width: $xsm-mobile ){
+        padding:1px;
+        margin:1.3rem 9px 7px 9px;
+      }
+
     }
 
       .select-reward-button {
@@ -561,7 +608,11 @@ main {
       max-width: 500px;
       height: auto;
       border-radius: 5px;
-      top: 22rem;
+      top: 21rem;
+
+      &[data-modal="completed-backed-project"]{
+        top:0;
+      }
 
       @include cardContainer();
 
@@ -631,7 +682,9 @@ main {
     
   }
 
-  @include cardContainer(100% , 7px, 1.2rem, 0)
+
+
+  @include cardContainer(100% , 7px 0, 1.2rem, 0)
 }
 
 // MEDIA QUERY (TABLET / DESKTOP)
@@ -673,5 +726,12 @@ main {
         }
       }
     }
+
+    // .modal-container{
+    //   .modal{
+    //     top:14rem;
+    //   }
+    // }
+
   }
 }
